ANTLR/JSONLDGraphGenerator/fuente/GrammarInputParser.java
// Generated from .\fuente\GrammarInputParser.g4 by ANTLR 4.7.1

package fuente;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarInputParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CSVID=1, JSONID=2, DOTID=3, SVGID=4, LEN=5, FONTCOLOR=6, FONTNAME=7, FONTSIZE=8, 
		ARROWSIZE=9, ARROWCOLOR=10, PENWD=11, FILLCOLOR=12, STYLE=13, SHAPE=14, 
		EDGE=15, NODE=16, RELATIONSHIP=17, CLASS=18, INHERITANCE=19, PROPERTY=20, 
		INDIRECT_USE=21, INT=22, STRINGS=23, NEWLINE=24, SPACE=25, TEXT=26;
	public static final int
		RULE_input = 0, RULE_file = 1, RULE_jsonid = 2, RULE_csvid = 3, RULE_svgid = 4, 
		RULE_dotid = 5, RULE_path = 6, RULE_field = 7, RULE_edge = 8, RULE_node = 9, 
		RULE_styleParameters = 10, RULE_params = 11, RULE_classes = 12, RULE_relationship = 13, 
		RULE_inheritance = 14, RULE_indirect_use = 15, RULE_property = 16, RULE_fontsize = 17, 
		RULE_len = 18, RULE_fontcolor = 19, RULE_fontname = 20, RULE_arrowsize = 21, 
		RULE_arrowcolor = 22, RULE_penwd = 23, RULE_fillcolor = 24, RULE_shape = 25, 
		RULE_style = 26, RULE_string = 27, RULE_numberValue = 28;
	public static final String[] ruleNames = {
		"input", "file", "jsonid", "csvid", "svgid", "dotid", "path", "field", 
		"edge", "node", "styleParameters", "params", "classes", "relationship", 
		"inheritance", "indirect_use", "property", "fontsize", "len", "fontcolor", 
		"fontname", "arrowsize", "arrowcolor", "penwd", "fillcolor", "shape", 
		"style", "string", "numberValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'-CSV='", "'-JSON='", "'-DOT='", "'-SVG='", "'-len_'", "'-fontcolor_'", 
		"'-fontname_'", "'-fontsize_'", "'-arrowsize_'", "'-arrowcolor_'", "'-penwidth_'", 
		"'-fillcolor_'", "'-style_'", "'-shape_'", "'edge_'", "'node_'", "'relationship='", 
		"'class='", "'inheritance='", "'property='", "'indirect_use='", null, 
		null, "'\r\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CSVID", "JSONID", "DOTID", "SVGID", "LEN", "FONTCOLOR", "FONTNAME", 
		"FONTSIZE", "ARROWSIZE", "ARROWCOLOR", "PENWD", "FILLCOLOR", "STYLE", 
		"SHAPE", "EDGE", "NODE", "RELATIONSHIP", "CLASS", "INHERITANCE", "PROPERTY", 
		"INDIRECT_USE", "INT", "STRINGS", "NEWLINE", "SPACE", "TEXT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammarInputParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarInputParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrammarInputParser.EOF, 0); }
		public List<FileContext> file() {
			return getRuleContexts(FileContext.class);
		}
		public FileContext file(int i) {
			return getRuleContext(FileContext.class,i);
		}
		public List<StyleParametersContext> styleParameters() {
			return getRuleContexts(StyleParametersContext.class);
		}
		public StyleParametersContext styleParameters(int i) {
			return getRuleContext(StyleParametersContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(60);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CSVID:
				case JSONID:
				case DOTID:
				case SVGID:
					{
					setState(58);
					file();
					}
					break;
				case LEN:
				case FONTCOLOR:
				case FONTNAME:
				case FONTSIZE:
				case ARROWSIZE:
				case ARROWCOLOR:
				case PENWD:
				case FILLCOLOR:
				case STYLE:
				case SHAPE:
					{
					setState(59);
					styleParameters();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CSVID) | (1L << JSONID) | (1L << DOTID) | (1L << SVGID) | (1L << LEN) | (1L << FONTCOLOR) | (1L << FONTNAME) | (1L << FONTSIZE) | (1L << ARROWSIZE) | (1L << ARROWCOLOR) | (1L << PENWD) | (1L << FILLCOLOR) | (1L << STYLE) | (1L << SHAPE))) != 0) );
			setState(64);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public CsvidContext csvid() {
			return getRuleContext(CsvidContext.class,0);
		}
		public JsonidContext jsonid() {
			return getRuleContext(JsonidContext.class,0);
		}
		public SvgidContext svgid() {
			return getRuleContext(SvgidContext.class,0);
		}
		public DotidContext dotid() {
			return getRuleContext(DotidContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CSVID:
				{
				setState(66);
				csvid();
				}
				break;
			case JSONID:
				{
				setState(67);
				jsonid();
				}
				break;
			case SVGID:
				{
				setState(68);
				svgid();
				}
				break;
			case DOTID:
				{
				setState(69);
				dotid();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(72);
			path();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JsonidContext extends ParserRuleContext {
		public TerminalNode JSONID() { return getToken(GrammarInputParser.JSONID, 0); }
		public JsonidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jsonid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterJsonid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitJsonid(this);
		}
	}

	public final JsonidContext jsonid() throws RecognitionException {
		JsonidContext _localctx = new JsonidContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jsonid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(JSONID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CsvidContext extends ParserRuleContext {
		public TerminalNode CSVID() { return getToken(GrammarInputParser.CSVID, 0); }
		public CsvidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_csvid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterCsvid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitCsvid(this);
		}
	}

	public final CsvidContext csvid() throws RecognitionException {
		CsvidContext _localctx = new CsvidContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_csvid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(CSVID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SvgidContext extends ParserRuleContext {
		public TerminalNode SVGID() { return getToken(GrammarInputParser.SVGID, 0); }
		public SvgidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_svgid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterSvgid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitSvgid(this);
		}
	}

	public final SvgidContext svgid() throws RecognitionException {
		SvgidContext _localctx = new SvgidContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_svgid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(SVGID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DotidContext extends ParserRuleContext {
		public TerminalNode DOTID() { return getToken(GrammarInputParser.DOTID, 0); }
		public DotidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dotid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterDotid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitDotid(this);
		}
	}

	public final DotidContext dotid() throws RecognitionException {
		DotidContext _localctx = new DotidContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dotid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(DOTID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public List<TerminalNode> TEXT() { return getTokens(GrammarInputParser.TEXT); }
		public TerminalNode TEXT(int i) {
			return getToken(GrammarInputParser.TEXT, i);
		}
		public List<NumberValueContext> numberValue() {
			return getRuleContexts(NumberValueContext.class);
		}
		public NumberValueContext numberValue(int i) {
			return getRuleContext(NumberValueContext.class,i);
		}
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitPath(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_path);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(84);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TEXT:
					{
					setState(82);
					match(TEXT);
					}
					break;
				case INT:
					{
					setState(83);
					numberValue();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==INT || _la==TEXT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public EdgeContext edge() {
			return getRuleContext(EdgeContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NODE:
				{
				setState(88);
				node();
				}
				break;
			case EDGE:
				{
				setState(89);
				edge();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeContext extends ParserRuleContext {
		public TerminalNode EDGE() { return getToken(GrammarInputParser.EDGE, 0); }
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitEdge(this);
		}
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_edge);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(EDGE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public TerminalNode NODE() { return getToken(GrammarInputParser.NODE, 0); }
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitNode(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(NODE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StyleParametersContext extends ParserRuleContext {
		public LenContext len() {
			return getRuleContext(LenContext.class,0);
		}
		public FontcolorContext fontcolor() {
			return getRuleContext(FontcolorContext.class,0);
		}
		public FontsizeContext fontsize() {
			return getRuleContext(FontsizeContext.class,0);
		}
		public FontnameContext fontname() {
			return getRuleContext(FontnameContext.class,0);
		}
		public ArrowsizeContext arrowsize() {
			return getRuleContext(ArrowsizeContext.class,0);
		}
		public ArrowcolorContext arrowcolor() {
			return getRuleContext(ArrowcolorContext.class,0);
		}
		public PenwdContext penwd() {
			return getRuleContext(PenwdContext.class,0);
		}
		public FillcolorContext fillcolor() {
			return getRuleContext(FillcolorContext.class,0);
		}
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public StyleContext style() {
			return getRuleContext(StyleContext.class,0);
		}
		public StyleParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_styleParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterStyleParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitStyleParameters(this);
		}
	}

	public final StyleParametersContext styleParameters() throws RecognitionException {
		StyleParametersContext _localctx = new StyleParametersContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_styleParameters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEN:
				{
				setState(96);
				len();
				}
				break;
			case FONTCOLOR:
				{
				setState(97);
				fontcolor();
				}
				break;
			case FONTSIZE:
				{
				setState(98);
				fontsize();
				}
				break;
			case FONTNAME:
				{
				setState(99);
				fontname();
				}
				break;
			case ARROWSIZE:
				{
				setState(100);
				arrowsize();
				}
				break;
			case ARROWCOLOR:
				{
				setState(101);
				arrowcolor();
				}
				break;
			case PENWD:
				{
				setState(102);
				penwd();
				}
				break;
			case FILLCOLOR:
				{
				setState(103);
				fillcolor();
				}
				break;
			case SHAPE:
				{
				setState(104);
				shape();
				}
				break;
			case STYLE:
				{
				setState(105);
				style();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public ClassesContext classes() {
			return getRuleContext(ClassesContext.class,0);
		}
		public RelationshipContext relationship() {
			return getRuleContext(RelationshipContext.class,0);
		}
		public InheritanceContext inheritance() {
			return getRuleContext(InheritanceContext.class,0);
		}
		public Indirect_useContext indirect_use() {
			return getRuleContext(Indirect_useContext.class,0);
		}
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_params);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASS:
				{
				setState(108);
				classes();
				}
				break;
			case RELATIONSHIP:
				{
				setState(109);
				relationship();
				}
				break;
			case INHERITANCE:
				{
				setState(110);
				inheritance();
				}
				break;
			case INDIRECT_USE:
				{
				setState(111);
				indirect_use();
				}
				break;
			case PROPERTY:
				{
				setState(112);
				property();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassesContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(GrammarInputParser.CLASS, 0); }
		public ClassesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterClasses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitClasses(this);
		}
	}

	public final ClassesContext classes() throws RecognitionException {
		ClassesContext _localctx = new ClassesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_classes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(CLASS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationshipContext extends ParserRuleContext {
		public TerminalNode RELATIONSHIP() { return getToken(GrammarInputParser.RELATIONSHIP, 0); }
		public RelationshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationship; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterRelationship(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitRelationship(this);
		}
	}

	public final RelationshipContext relationship() throws RecognitionException {
		RelationshipContext _localctx = new RelationshipContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_relationship);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(RELATIONSHIP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InheritanceContext extends ParserRuleContext {
		public TerminalNode INHERITANCE() { return getToken(GrammarInputParser.INHERITANCE, 0); }
		public InheritanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inheritance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterInheritance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitInheritance(this);
		}
	}

	public final InheritanceContext inheritance() throws RecognitionException {
		InheritanceContext _localctx = new InheritanceContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_inheritance);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(INHERITANCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Indirect_useContext extends ParserRuleContext {
		public TerminalNode INDIRECT_USE() { return getToken(GrammarInputParser.INDIRECT_USE, 0); }
		public Indirect_useContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indirect_use; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterIndirect_use(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitIndirect_use(this);
		}
	}

	public final Indirect_useContext indirect_use() throws RecognitionException {
		Indirect_useContext _localctx = new Indirect_useContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_indirect_use);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(INDIRECT_USE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public TerminalNode PROPERTY() { return getToken(GrammarInputParser.PROPERTY, 0); }
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitProperty(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(PROPERTY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FontsizeContext extends ParserRuleContext {
		public TerminalNode FONTSIZE() { return getToken(GrammarInputParser.FONTSIZE, 0); }
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public NumberValueContext numberValue() {
			return getRuleContext(NumberValueContext.class,0);
		}
		public FontsizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fontsize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterFontsize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitFontsize(this);
		}
	}

	public final FontsizeContext fontsize() throws RecognitionException {
		FontsizeContext _localctx = new FontsizeContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_fontsize);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(FONTSIZE);
			setState(126);
			field();
			setState(127);
			params();
			setState(128);
			numberValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LenContext extends ParserRuleContext {
		public TerminalNode LEN() { return getToken(GrammarInputParser.LEN, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public NumberValueContext numberValue() {
			return getRuleContext(NumberValueContext.class,0);
		}
		public LenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_len; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).enterLen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarInputParserListener ) ((GrammarInputParserListener)listener).exitLen(this);
		}
	}
